# open-ai-semantic-search-with-encode-project-data

./: .dockerignore  .gitignore  LICENSE  README.md  docker-compose.yml  requirements.txt  search.ipynb  semantic_search_example.ipynb
backend/: setup.cfg
backend/src/ssed/: __init__.py  api.py  cache.py  embeddings.py  expert.py  mypy.ini  results.py  search.py  serializer.py  similarity.py
backend/src/ssed/remote/: openai.py
cdk/: README.md  app.py  cdk.context.json
data/: .gitattributes  awards-documents.json  awards-ids.json  awards-serialized_documents.json  awards.npz  datasets.npz
docker/backend/: Dockerfile
docker/frontend/: Dockerfile
docker/nextjs/: Dockerfile
docker/python/: Dockerfile
frontend/: README.md  next.config.js  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/api/evaluate-search-relevancy/: route.ts
frontend/app/api/search-by-id/: route.ts
frontend/app/api/search-by-query/: route.ts
frontend/app/api/suggestion/: route.ts
frontend/components/: Card.tsx  Header.tsx  Input.tsx  Relevancy.tsx  Results.tsx  Search.tsx
scripts/: run-api.sh
