[metadata]
name = semantic-search-encode-data
version = 0.1.0
description = Semantic search over ENCODE Project data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/keenangraham/open-ai-semantic-search-with-encode-project-data
project_urls =
    Bug Tracker = https://github.com/keenangraham/open-ai-semantic-search-with-encode-project-data/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires =
    aiohttp==3.8.4
    aiosignal==1.3.1
    anyio==3.6.2
    async-timeout==4.0.2
    attrs==23.1.0
    certifi==2022.12.7
    charset-normalizer==3.1.0
    click==8.1.3
    dnspython==2.3.0
    email-validator==2.0.0.post2
    fastapi==0.95.1
    frozenlist==1.3.3
    h11==0.14.0
    httpcore==0.17.0
    httptools==0.5.0
    httpx==0.24.0
    idna==3.4
    itsdangerous==2.1.2
    Jinja2==3.1.2
    MarkupSafe==2.1.2
    multidict==6.0.4
    numpy==1.24.2
    openai==0.27.4
    orjson==3.8.10
    pandas==2.0.0
    pydantic==1.10.7
    python-dateutil==2.8.2
    python-dotenv==1.0.0
    python-multipart==0.0.6
    pytz==2023.3
    PyYAML==6.0
    requests==2.28.2
    six==1.16.0
    sniffio==1.3.0
    starlette==0.26.1
    tqdm==4.65.0
    typing_extensions==4.5.0
    tzdata==2023.3
    ujson==5.7.0
    urllib3==1.26.15
    uvicorn==0.21.1
    uvloop==0.17.0
    watchfiles==0.19.0
    websockets==11.0.2
    yarl==1.8.2

[options.extras_require]
test =
    pytest==5.3.2
    pytest-mock==2.0.0
    pytest-cov==2.8.1
    pytest-instafail==0.4.2
    pytest-exact-fixtures==0.3
    coveralls==3.3.1

[options.packages.find]
where = src